--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>buoi9</title>
+    <style>
+        .header{
+            background: url(bg-1.jpg);
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class = "header">
+    </div>
 </body>
 </html>
