--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
             background: url(bg-1.jpg);
             background-size: cover;
         }
-    </style>
+    	.header .nav{
+        	width: 100%;
+            height: 100px;
+            color: white;
+            display: flex
+        }
+    <\style>
 </head>
 <body>
     <div class = "header">
+    	<div class = "nav">
+        <\div>
     </div>
 </body>
 </html>
