--- a/index.html
+++ b/index.html
@@ -15,12 +15,19 @@
             color: white;
             display: flex
         }
-    <\style>
+        .header .nav .logo{
+        	width: 50%;
+        	border: 2px solid aqua
+        }
+    </style>
 </head>
 <body>
     <div class = "header">
     	<div class = "nav">
-        <\div>
+            <div class = "logo">
+                <img src ="logo.png" alt = "">
+            </div>
+        </div>
     </div>
 </body>
 </html>
