--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         	width: 100%;
             height: 100px;
             color: white;
-            display: flex
+            display: flex;
+            background: red;
+            margin: 0 auto;
         }
         .header .nav .logo{
         	width: 50%;
-        	border: 2px solid aqua
+        	border: 2px solid aqua;
         }
     </style>
 </head>
