--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             background-size: cover;
         }
     	.header .nav{
-        	width: 100%;
+        		width: 100%;
             height: 100px;
             color: white;
             display: flex;
@@ -19,8 +19,10 @@
         }
         .header .nav .logo{
         	width: 50%;
-        	border: 2px solid aqua;
         }
+        .hearder .nav .logo img{
+    		width: 200px
+            }
     </style>
 </head>
 <body>
