--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
             background-size: cover;
         }
     	.header .nav{
-        		width: 100%;
+        	width: 100%;
             height: 100px;
             color: white;
             display: flex;
             background: red;
             margin: 0 auto;
+            align-items: center;
+            padding: 40px;
         }
         .header .nav .logo{
         	width: 50%;
         }
         .hearder .nav .logo img{
-    		width: 200px
+    		width: 200px;
             }
     </style>
 </head>
