--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
         .header .nav .logo{
         	width: 50%;
         }
-        .hearder .nav .logo img{
+        .header .nav .logo img{
     		width: 200px;
+            }
+        .header .nav .menu{
+            width: 50%
+            }
+        .header .info{
+        	width: 100%;
+            color: white;
+            padding: 100px
             }
     </style>
 </head>
@@ -33,6 +41,14 @@
             <div class = "logo">
                 <img src ="logo.png" alt = "">
             </div>
+        	<div class = "menu">
+            Danh sách menu
+        	</div>
+        </div>
+        <div class = "info">
+        	<h1> thông tin đề cập </h1>
+    		<h2> thông tin đề cập </h2>
+            <p> more info <p>
         </div>
     </div>
 </body>
