--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
     	.header .nav{
         	width: 100%;
-            height: 100px;
+            height: 80px;
             color: white;
             display: flex;
             background: red;
@@ -31,7 +31,9 @@
         .header .info{
         	width: 100%;
             color: white;
-            padding: 100px
+            padding: 100px;
+            text-align: center;
+            line-height: 100px;
             }
     </style>
 </head>
@@ -48,7 +50,7 @@
         <div class = "info">
         	<h1> thông tin đề cập </h1>
     		<h2> thông tin đề cập </h2>
-            <p> more info <p>
+            <button> more info </p>
         </div>
     </div>
 </body>
