--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
                 <img src ="logo.png" alt = "">
             </div>
         	<div class = "menu">
-            Danh sách menu
+            	<ul>
+                    <li> <a href ="#"> Home </a></li>
+					 <li> <a href ="#"> Products </a></li>
+                    <li> <a href = "#"> Prices </a></li>
+            	</ul>
         	</div>
         </div>
         <div class = "info">
