--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
             text-align: center;
             line-height: 100px;
             }
+        .header .menu ul{
+        	display: flex;
+            justify-content: flex-end;
+            list-style: none;
+            }
+        .header .menu ul li a{
+        	text-decoration: none;
+            margin-left: 10px;
+            color: white
+            }
     </style>
 </head>
 <body>
