--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         .header .menu ul li a{
         	text-decoration: none;
             margin-left: 10px;
-            color: white
+            color: white;
             }
     </style>
 </head>
