--- a/index.html
+++ b/index.html
@@ -8,17 +8,24 @@
         .header{
             background: url(bg-1.jpg);
             background-size: cover;
+	    height: 80vh;
+	    background-position: center;
+	    padding-top: 40px;
         }
     	.header .nav{
-        	width: 100%;
-            height: 80px;
+            width: 80%;
             color: white;
             display: flex;
-            background: red;
+            background: #2980b9;
             margin: 0 auto;
             align-items: center;
             padding: 40px;
+            justify-content: space-between;
         }
+	.header .banner{
+		text-align: center;
+		padding: 100px;
+	}
         .header .nav .logo{
         	width: 50%;
         }
@@ -37,14 +44,33 @@
             }
         .header .menu ul{
         	display: flex;
-            justify-content: flex-end;
             list-style: none;
             }
         .header .menu ul li a{
         	text-decoration: none;
-            margin-left: 10px;
+            margin-right: 20px;
+		font-size: 20px;
+		font-weight: 300
             color: white;
             }
+	.header .nav .menu ul li:first-child a{
+		border-bottom: 5px solid orange;
+	}
+	.header .banner .button{
+		padding: 15px 20px;
+		background: #f39c12;
+		color: #fff;
+		border:none;
+		text-transform: uppercase;
+		font-size: 12px;
+		margin-top: 20px;
+	}
+	.header .banner .button i{
+		margin-left: 15px;
+	}
+	.hearder .contact a{
+		margin-left: 10px
+	}
     </style>
 </head>
 <body>
