--- a/index.html
+++ b/index.html
@@ -76,21 +76,18 @@
 <body>
     <div class = "header">
     	<div class = "nav">
-            <div class = "logo">
-                <img src ="logo.png" alt = "">
-            </div>
         	<div class = "menu">
             	<ul>
                     <li> <a href ="#"> Home </a></li>
-					 <li> <a href ="#"> Products </a></li>
+		    <li> <a href ="#"> Products </a></li>
                     <li> <a href = "#"> Prices </a></li>
             	</ul>
         	</div>
         </div>
-        <div class = "info">
-        	<h1> thông tin đề cập </h1>
-    		<h2> thông tin đề cập </h2>
-            <button> more info </p>
+        <div class = "banner">
+        	<h1> reliable engineering </h1>
+    		<h1> thông tin đề cập </h1>
+		<button>Our porfolio<i class = "fa-solid fa-arrow-right"></i></button>
         </div>
     </div>
 </body>
