--- a/index.html
+++ b/index.html
@@ -76,11 +76,17 @@
 <body>
     <div class = "header">
     	<div class = "nav">
-        	<div class = "menu">
+         	<div class = "menu">
+            		<ul>
+                   		 <li> <a href ="#"> Home </a></li>
+		   		 <li> <a href ="#"> Products </a></li>
+                   		 <li> <a href = "#"> Prices </a></li>
+            		</ul>
+		</div>
+         	<div class = "contact">
             	<ul>
-                    <li> <a href ="#"> Home </a></li>
-		    <li> <a href ="#"> Products </a></li>
-                    <li> <a href = "#"> Prices </a></li>
+                    <li> <a href ="#"><i class = "fa-solid fa-cart-shopping"></i> </a></li>
+		    <li> <a href ="#"> <i class = "fa-solid fa-facebook"></i> </a></li>
             	</ul>
         	</div>
         </div>
