--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>buoi9</title>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         .header{
             background: url(bg-1.jpg);
@@ -33,7 +34,7 @@
     		width: 200px;
             }
         .header .nav .menu{
-            width: 50%
+            width: 50%;
             }
         .header .info{
         	width: 100%;
@@ -68,7 +69,7 @@
 	.header .banner .button i{
 		margin-left: 15px;
 	}
-	.hearder .contact a{
+	.header .contact a{
 		margin-left: 10px
 	}
     </style>
